# multi-agent-security

./: .gitignore  CITATION.cff  EXPERIMENTAL_DESIGN.md  FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  pyproject.toml  reproduce.sh
blog/: conference_abstract.md  discord_post.md  draft.md  linkedin_post.md  linkedin_post_v2.md  reddit_post.md  reddit_rnetsec_post.md  substack_intro.md
config/: base.yaml
docs/: CONTENT_PLAN.md  DATA_CONTRACT.md  DECISION_LOG.md  EXPERIMENT_CONTRACT.md  METRICS_CONTRACT.md  UPGRADE_PLAN.md  UPGRADE_TO_8.md
outputs/: quality_loop_report.json  semantic_review.json
outputs/experiments/: se150_missing_experiments.json  se150_results.json
scripts/: make_figures.py  run_experiments.py  run_real_agents.py  run_sensitivity.py
src/: agent.py  attacker.py  network.py  trust.py
tests/: test_network.py
